FIX: Chinese title won't cut off while zooming in

--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -20,7 +20,6 @@
     line-height:1.4;
     margin: 1rem 0;
     text-align: center;
-    word-break: keep-all;
   }
 
   &-line {
